Fixed spacing issue on product page

--- a/CSS/product_listing.css
+++ b/CSS/product_listing.css
@@ -19,12 +19,10 @@ main {
     width: 70%;
     border: 1px solid black;
     border-radius: 5px;
-    margin-left: 1em;
+    height: 100%;
 }
 
 .product-sub-image {
-    /* height: 13em;
-    width: 15em; */
     height: 50%;
     width: 100%;  
 }
@@ -32,10 +30,10 @@ main {
 /* Product Info + Actions */
 .product-actions {
     margin-left: 2em;
-    width: 30%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between; 
 }
 
 
@@ -69,6 +67,11 @@ main {
     filter: var(--colour-valid);
     margin-left: 0.5em;
     margin-bottom: 0.5em;
+}
+
+.sub-txt + .input-quantity {
+    height: 1.75em;
+    width: 25%;
 }
 
 .purchase-btns {
